examples/test/testpolicy1113.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1113
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key3: value1
      key4: value36
      key42: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value9
      podSelector:
        matchLabels:
          key24: value47
          key33: value9
